[gsm] Log out on SIGTERM and SIGINT

Note that this requires a change in GDM to correctly work in the GDM
case.

https://bugzilla.gnome.org/show_bug.cgi?id=607658